--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,34 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
+    <link href="../static/fonts/Opificio_Bold_rounded.woff" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <title>Document</title>
 </head>
 <body>
 <div class="intro">
-
+    <div class="header">
+        <div class="header__inner">
+            <div class="b">For Teams</div>
+            <div class="a">Resources</div>
+        </div>
+        <div class="header__deep">
+            <div class="logo">Pnab</div>
+            <div class="s__text">shop by</div>
+            <div class="s__text">chairs</div>
+            <div class="s__text">desks</div>
+            <div class="s__text">accessories</div>
+            <div class="s__text">workplace</div>
+            <div class="s__text">bundles</div>
+            <div class="s__butt"> Design My Office</div>
+        </div>
+    </div>
 </div>
-
-
 </body>
 </html>
