--- a/templates/index.html
+++ b/templates/index.html
@@ -24,12 +24,14 @@
         </div>
         <div class="header__deep">
             <div class="logo">Pnab</div>
-            <div class="s__text">shop by</div>
-            <div class="s__text">chairs</div>
-            <div class="s__text">desks</div>
-            <div class="s__text">accessories</div>
-            <div class="s__text">workplace</div>
-            <div class="s__text">bundles</div>
+            <div class="s__table__text">
+                <div class="s__text">shop by</div>
+                <div class="s__text">chairs</div>
+                <div class="s__text">desks</div>
+                <div class="s__text">accessories</div>
+                <div class="s__text">workplace</div>
+                <div class="s__text">bundles</div>
+            </div>
             <div class="s__butt"> Design My Office</div>
         </div>
     </div>
