--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,23 +63,28 @@ body{
     padding: 5px 2px;
     top: 50%;
     left: 6%;
-    margin-right: -50%;
     transform: translate(-50%, -50%);
     font-family: 'Josefin Sans', sans-serif;
+
+}
+.s__table__text{
+    position: absolute;
+    top: 0;
+    left: 200px;
+    width: 800px;
+    height: 100%;
+    justify-content: space-between;
 
 }
 .s__text{
     position: relative;
     display: inline-block;
-    bottom: 38px;
-    left: 170px;
-    float: left;
+    top: 5px;
     padding: 26px 14px;
     text-transform: uppercase;
 }
 .s__butt{
     position: relative;
-    display: inline-block;
     width: 132px;
     height: 28px;
     color: #f3eeea;
