update design and fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,11 @@
             <div class="s__butt"> Design My Office</div>
         </div>
     </div>
+    <div class="img__unit__block">
+        <div class="img__block">
+            <div class="img 1"></div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
