--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,24 +10,35 @@ body{
     display: block;
 
 }
+body::-webkit-scrollbar {
+  width: 12px;
+}
+body::-webkit-scrollbar-track {
+  background: rgba(192, 192, 192, 0.6);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #3a3a3a;
+  border-radius: 20px;
+    border: rgb(215, 213, 213) 3px solid;
+}
 .intro{
     max-width: 1920px;
     height: 300vh;
 }
 .header{
-    position: sticky;
+    position: absolute;
     width: 100%;
     height: 34px;
     border-bottom: 1px solid #c6cbc8;
-    top:17px;
-    left: 1000px;
     margin-right: -50%;
-    transform: translate(-50%, -50%)
+    z-index: 100;
 }
 .header__inner{
     justify-content: space-between;
     width: 100%;
     height: 100%;
+    z-index: 100;
 }
 .b{
     position: relative;
@@ -54,15 +65,17 @@ body{
     width: 100%;
     height: 77px;
     left: -1px;
+    border-bottom: 1px solid #c6cbc8;
+    z-index: 100;
 }
 .logo{
-    position: relative;
+    position: absolute;
     width: 100px;
     height: 50px;
     font-size: 40px;
     padding: 5px 2px;
     top: 50%;
-    left: 6%;
+    left: 85px;
     transform: translate(-50%, -50%);
     font-family: 'Josefin Sans', sans-serif;
 
@@ -73,6 +86,7 @@ body{
     left: 200px;
     width: 800px;
     height: 100%;
+    margin-left: 15px;
     justify-content: space-between;
 
 }
@@ -93,7 +107,34 @@ body{
     text-align: center;
     float: right;
     font-family: 'Josefin Sans', sans-serif;
-    bottom: 35px;
-    margin: 10px 40px 10px 0;
+    margin: 25px 40px 25px 0;
+    border: 1px solid #314438;
     padding: 6px;
+    transition: .3s;
+}
+.s__butt:hover {
+    color: #314438;
+    background: #f3eeea;
+}
+.img__unit__block{
+}
+
+.img__block{
+    position: absolute;
+    top: 50%;
+    left: 40px;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+
+}
+.img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url("../img/duck.jpg") center no-repeat;
+    transition: 1s;
+}
+.img:hover{
+    transform: scale(1.05);
 }
