--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,9 @@
                 <div class="s__text">bundles</div>
             </div>
             <div class="s__butt"> Design My Office</div>
+            <div class="icon_basket" tabindex="-1" >
+                <svg style="color: rgb(0, 0, 0);" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-basket" viewBox="0 0 32 32"> <path d="M24.917,9.938l-1.604-5.21c-0.4-1.402-1.803-2.404-3.306-2.404h-7.915 c-1.604,0-3.006,1.002-3.306,2.404l-1.704,5.21H0.07l4.608,17.333c0.4,1.402,1.804,2.404,3.307,2.404h16.13 c1.603,0,3.005-1.002,3.307-2.404L31.93,9.938H24.917z M15.298,20.559v7.614h-3.005l-1.603-7.614H15.298z M10.69,19.056 l-1.402-7.614h6.111v7.614H10.69z M16.802,20.559h4.508l-1.603,7.614h-3.005v-7.614H16.802z M16.802,19.056v-7.614h6.111 l-1.402,7.614H16.802z M24.416,11.542h5.511l-2.004,7.614h-5.009L24.416,11.542z M10.79,4.629c0.101-0.501,0.602-0.802,1.203-0.802 h8.215c0.601,0,1.102,0.301,1.202,0.802l1.503,5.31H9.288L10.79,4.629z M7.685,11.542l1.502,7.614H4.178l-2.004-7.614H7.685z M6.583,27.271l-1.904-6.613h4.408l1.603,7.615H7.985C7.383,28.172,6.683,27.772,6.583,27.271L6.583,27.271z M25.417,27.271 c-0.201,0.5-0.701,0.901-1.403,1.002H21.41l1.603-7.615h4.409L25.417,27.271z" fill="#000000"></path></svg>
+            </div>
         </div>
     </div>
     <div class="img__unit__block">
