--- a/static/css/style.css
+++ b/static/css/style.css
@@ -140,12 +140,16 @@ body::-webkit-scrollbar-thumb {
 }
 
 .icon_basket{
-    position: absolute;
-    weight: 32px;
-    height: 32px;
-    padding-left: 93%;
-    padding-top: 1.5%;
-    overflow: visible;
-    box-sizing: border-box;
-    background: center no-repeat;
+    position: relative;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    float: right;
+    top: 25%;
+    left: 180px;
+    margin: 10px;
+}
+.svg__basket{
+    width: 100%;
+    height: 100%;
 }
