--- a/templates/index.html
+++ b/templates/index.html
@@ -38,9 +38,16 @@
             </div>
         </div>
     </div>
+    <div class="own__img__block"></div>
     <div class="img__unit__block">
-        <div class="img__block">
-            <div class="img 1"></div>
+        <div class="img__block f">
+            <div class="img q"></div>
+        </div>
+        <div class="img__block s">
+            <div class="img w"></div>
+        </div>
+        <div class="img__block t">
+            <div class="img e"></div>
         </div>
     </div>
 </div>
