--- a/templates/index.html
+++ b/templates/index.html
@@ -51,5 +51,21 @@
         </div>
     </div>
 </div>
+
+    <div class="com__block">
+        <div class="comments__form">
+            <form method="post" action="">
+                <div class="imp1">
+                    <input class="input__form1" type="text"  name="username" placeholder="username" required>
+                    <span class="input_span"></span>
+                </div>
+                <div class="imp1">
+                    <p><textarea class="input__form2" name="comment" placeholder="comment" required></textarea></p>
+                    <span class="input_span"></span>
+                </div>
+                <button type="submit" class="combat">push</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
