--- a/static/css/style.css
+++ b/static/css/style.css
@@ -145,6 +145,84 @@ body::-webkit-scrollbar-thumb {
 
 
 }
+
+.com__block{
+    position: relative;
+    top: 100%;
+    left: 40px;
+    width: 500px;
+    height: 300px;
+    overflow: hidden;
+}
+
+.comments__form{
+    border: 1px solid #e6e6e6;
+    border-radius: 10px;
+    position: relative;
+}
+
+.input__form1{
+    color: #333;
+    line-height: 1.2;
+    font-size: 18px;
+    display: block;
+    width: 100%;
+    background: 0 0;
+    height: 60px;
+    padding: 0 20px;
+    border-radius: 10px;
+}
+.input__span{
+    position: absolute;
+    display: block;
+    width: calc(100% + 2px);
+    height: calc(100% + 2px);
+    top: -1px;
+    left: -1px;
+    pointer-events: none;
+    border: 1px solid #fc00ff;
+    border-radius: 10px;
+    opacity: 0;
+    transition: all .4s;
+    transform: scaleX(1.1) scaleY(1.3);
+}
+
+.input__form2{
+    color: #333;
+    line-height: 1.2;
+    font-size: 18px;
+    display: block;
+    width: 100%;
+    background: 0 0;
+    height: 100px;
+    padding: 0 20px;
+    border-radius: 10px;
+}
+
+.imp1{
+    margin: 10px;
+}
+
+.imp2{
+    margin: 10px;
+}
+
+.combat{
+    height: 40px;
+    width: 70px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    outline: none!important;
+    border-radius: 10px;
+    background-color: #ddd;
+}
+
+.combat:hover {
+    cursor: pointer;
+    box-shadow: 0 1px 0 rgb(0 0 0 / 30%), 0 2px 2px -1px rgb(0 0 0 / 50%), 0 1px 0 rgb(255 255 255 / 30%) inset;
+    text-shadow: 0 1px 0 rgb(255 255 255 / 90%);
+}
 .img__unit__block{
     position: absolute;
     width: 100%;
